// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a Button with merged attributes 1`] = `
<button
  aria-disabled={false}
  className="button default TestClass"
  data-mock="data"
  disabled={false}
  isCompact={false}
  style={
    Object {
      "height": "100px",
    }
  }
  type="button"
/>
`;

exports[`should render a button with type equal to button 1`] = `
<button
  aria-disabled={false}
  className="button default"
  disabled={false}
  isCompact={false}
  type="button"
/>
`;

exports[`should render a button with type equal to reset 1`] = `
<button
  aria-disabled={false}
  className="button default"
  disabled={false}
  isCompact={false}
  type="reset"
/>
`;

exports[`should render a button with type equal to submit 1`] = `
<button
  aria-disabled={false}
  className="button default"
  disabled={false}
  isCompact={false}
  type="submit"
/>
`;

exports[`should render a default button 1`] = `
<button
  aria-disabled={false}
  className="button default"
  disabled={false}
  isCompact={false}
  type="button"
/>
`;

exports[`should render a primary button 1`] = `
<button
  aria-disabled={false}
  className="button primary"
  disabled={false}
  isCompact={false}
  type="button"
/>
`;

exports[`should render a secondary button 1`] = `
<button
  aria-disabled={false}
  className="button secondary"
  disabled={false}
  isCompact={false}
  type="button"
/>
`;

exports[`should render an icon 1`] = `
<button
  aria-disabled={false}
  className="button default tiny"
  disabled={false}
  isCompact={false}
  type="button"
>
  <img
    alt="icon"
  />
</button>
`;

exports[`should render an icon and a text 1`] = `
<button
  aria-disabled={false}
  className="button default tiny"
  disabled={false}
  isCompact={false}
  type="button"
>
  <img
    alt="icon"
  />
  <span
    className="text"
  >
    text
  </span>
</button>
`;

exports[`should render as an anchor when provided an href 1`] = `
<a
  aria-disabled={false}
  className="button default"
  disabled={false}
  href="MockHref"
  isCompact={false}
  type="button"
>
  <span
    className="text"
  >
    href
  </span>
</a>
`;

exports[`should render as disabled when set 1`] = `
<button
  aria-disabled={true}
  className="button default is-disabled"
  disabled={true}
  isCompact={false}
  tabIndex="-1"
  type="button"
>
  <span
    className="text"
  >
    Disabled
  </span>
</button>
`;

exports[`should render text then an icon when reversed 1`] = `
<button
  aria-disabled={false}
  className="button default tiny"
  disabled={false}
  isCompact={false}
  type="button"
>
  <span
    className="text"
  >
    text
  </span>
  <img
    alt="icon"
  />
</button>
`;
